--- a/dvc.yaml
+++ b/dvc.yaml
@@ -16,5 +16,5 @@ jobs:
           dvc metrics diff --show-md master > report.md
           # Add figure to the report
           echo "## Validating results by region"
-          cml-publish by_region.png --md >> report.md
+          cml publish by_region.png --md >> report.md
           cml-send-comment report.md
